Added download file method for telegram files

--- a/example.config.yml
+++ b/example.config.yml
@@ -5,7 +5,7 @@
 debug: true
 logLevel: info # One of debug | info | warn | error
 telegram:
-  botToken: "YOUR_TELEGRAM_BOT_TOKEN" # Enter your Telegram bot token which can be obtained from https://telegram.me/botfather
+  botToken: "YOUR_TELEGRAM_BOT_TOKEN" # Enter your Telegram bot token, which can be obtained from https://telegram.me/botfather
 database:
   type: sqlite # One of sqlite | postgres | mysql
   filename: "app.db" # Only required for type sqlite
